--- a/css/index.css
+++ b/css/index.css
@@ -4,11 +4,19 @@ body {
 
 h1, p {
   margin: 0;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  margin-top: 5px; }
+
+p {
+  font-size: 0.8rem; }
 
 ul {
   padding: 0;
   margin: 0; }
+
+.text-highlight {
+  color: #3eb392;
+  font-weight: bold; }
 
 .box {
   width: 100px;
@@ -29,15 +37,13 @@ header {
 .top {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space;
-      -ms-flex-pack: space;
-          justify-content: space; }
+  display: flex; }
+  .top .img {
+    width: 25%; }
   .top .name {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
-    text-align: center;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
@@ -49,25 +55,31 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: 20px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  margin-top: 10px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start; }
   .info li {
-    width: 30%;
+    width: 100%;
     list-style: none;
-    font-weight: bold;
-    text-align: center; }
+    text-align: left;
+    font-size: 0.8rem;
+    margin-bottom: 5px;
+    text-transform: none; }
 
 .cv__detail {
   margin-top: 20px; }
 
 .block {
   padding-top: 10px;
-  border-top: 1px solid #3eb392;
+  border-top: 1px solid #bacac0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -76,7 +88,8 @@ header {
 .block__title {
   font-weight: bold;
   text-transform: uppercase;
-  width: 25%; }
+  width: 25%;
+  color: #3eb392; }
   .block__title h1 {
     display: table;
     margin: 0;
@@ -86,4 +99,33 @@ header {
     text-transform: uppercase; }
 
 .block__detail {
-  width: 75%; }
+  width: 75%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .block__detail .is-2 {
+    width: calc(99.9% * 1/2 - (10px - 10px * 1/2)); }
+  .block__detail .is-2:nth-child(1n) {
+  float: left;
+  margin-right: 10px;
+  clear: none; }
+  .block__detail .is-2:last-child {
+  margin-right: 0; }
+  .block__detail .is-2:nth-child(2n) {
+  margin-right: 0;
+  float: right; }
+  .block__detail .is-2:nth-child(2n + 1) {
+  clear: both; }
+  .block__detail .is-3 {
+    width: calc(99.9% * 1/3 - (10px - 10px * 1/3)); }
+  .block__detail .is-3:nth-child(1n) {
+  float: left;
+  margin-right: 10px;
+  clear: none; }
+  .block__detail .is-3:last-child {
+  margin-right: 0; }
+  .block__detail .is-3:nth-child(3n) {
+  margin-right: 0;
+  float: right; }
+  .block__detail .is-3:nth-child(3n + 1) {
+  clear: both; }
