--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,14 +1,18 @@
 //color
-$primary: #f7f7f7
+$primary: #f1f1f1
 $pri_darken: #d4d4d4
 $text_color: #3c3c3c
 
+//green
+$green: #c3d1d4
+$grey: #e8e8e8
 $text_highlight: #161918
-$pri_bg: rgb(21, 161, 204)
+$pri_bg: #112131
 
 body 
 	-webkit-print-color-adjust: exact
 	color: $text_color
+	font-family: 'Roboto', sans-serif
 
 h1, p 
 	margin: 0
@@ -26,7 +30,6 @@ ul
 		list-style: none
 		font-size: 0.9em
 		padding: 5px 0
-
 // global
 .text-highlight
 	color: $text_highlight
@@ -52,14 +55,40 @@ ul
 // main
 .layout
 	display: flex
-	margin-bottom: 1em
+	margin-bottom: 0
+	&.is-stretch
+		align-items: stretch
+	&.is-100
+		height: 100%
 	.is-column
+		&:nth-child(2n)
+			padding-right: 30px
+			padding-left: 30px
+		&.is-none-bg
+			background: none !important
+
 		&.is-header
 			background: $pri_bg
 			color: white
+			h1
+				font-style: normal 
+				font-weight: 400
+			h3 
+				color: $grey
+				font-style: normal
+				font-weight: 300
+				margin-top: 5px
+			.info
+				display: flex
+				justify-content: space-between
+				font-weight: 100
+				li
+					font-style: normal
+					font-weight: 100
+		
 		padding: 10px
 		flex: 1
-		background: $primary
+		background: $grey
 		&:first-child
 			//margin-right: 10px
 			flex-basis: 30%
@@ -68,16 +97,24 @@ ul
 			flex-basis: 70%
 // header
 .info
-	display: flex
-	justify-content: space-around
-	font-weight: 100
+	
 // ----------------------------------block ------------------------------------------
 .block
+	margin-bottom: 35px
 	.title
 		color: $pri_bg
+		text-transform: uppercase
+		h2
+			font-size: 1.2em
+			margin: 0.6em 0
+
 
 	.detail
+		h4 
+			text-transform: capitalize
+			margin: 5px 0
 .detail__name
+
 	
 .detail__level
 	.process
