--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -50,11 +50,11 @@ ul
 	//width: 80%
 	margin: 0 auto
 	width: 740px
-	height: 842px
+	height: 850px
 	display: block 
 	margin: auto
 
-	padding-top: 20px
+	//padding-top: 20px
 
 .font 
 	&.bold
@@ -110,16 +110,20 @@ ul
 	
 // ----------------------------------block ------------------------------------------
 .block
-	margin-bottom: 35px
+	margin-bottom: 25px
+	h3 
+		margin: 5px 0	
 	.title
 		color: $pri_bg
 		text-transform: uppercase
 		h2
 			font-size: 1.2em
 			margin: 0.6em 0
-	.detail
+			margin-bottom: 0.4em
+	.detail		
 		.detail__block
 			margin-bottom: 10px
+			
 			.sub-title
 				display: flex
 				justify-content: space-between
