--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -35,6 +35,9 @@ ul
 		font-size: 0.9em
 		padding: 5px 0
 // global
+.res
+	width: 150px
+	height: auto
 .text-highlight
 	color: $text_highlight
 	font-weight: bold
