--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -110,6 +110,9 @@ ul
 			flex-basis: 70%
 // header
 .info
+
+.move-to-right
+	padding-left: 20px !important
 	
 // ----------------------------------block ------------------------------------------
 .block
@@ -124,9 +127,9 @@ ul
 			margin: 0.6em 0
 			margin-bottom: 0.4em
 	.detail		
+		
 		.detail__block
-			margin-bottom: 10px
-			
+			margin-bottom: 10px			
 			.sub-title
 				display: flex
 				justify-content: space-between
